<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/electric_car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_star"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_price"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/price"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_car" />

            <TextView
                android:id="@+id/tv_price_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_value"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toTopOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_batery"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/battery"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_batery_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_value"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_batery"
                app:layout_constraintTop_toTopOf="@id/tv_batery" />

            <TextView
                android:id="@+id/tv_horsepower"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/horsepower"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_batery" />

            <TextView
                android:id="@+id/tv_horsepower_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horsepower_value"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_horsepower"
                app:layout_constraintTop_toTopOf="@id/tv_horsepower" />

            <TextView
                android:id="@+id/tv_recharge"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/recharge"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_horsepower" />

            <TextView
                android:id="@+id/tv_recharge_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge_value"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_recharge"
                app:layout_constraintTop_toTopOf="@id/tv_recharge" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>